Fix README example commands: correct package and add --add-exports flag